--- a/doc/resources/assets/csses/refguide_overrides.css
+++ b/doc/resources/assets/csses/refguide_overrides.css
@@ -98,10 +98,6 @@ blockquote p{
     text-align:center;
 }
 
-.navbar-inner {
-    height: 40px;
-}
-
 #topSection {
     width: 1000px;
 }
@@ -111,27 +107,7 @@ blockquote p{
 .small_win #topSection .dropdown {
     margin-right: 40%;
 }
-.navbar .brand {
-    margin-left: 0px;
-}
-.brand {
-    background: transparent url(../images/node_logo.png) no-repeat 13px 5px;
-    width: 105px;
-    outline: none;
-    height: 40px;
-    padding: 0 10px !important; 
-    border: none;
-}
-.brand.dropdown-toggle:after {
-    content: none;
-    display: block;
-    height: 40px;
-    border: none;
-}
-.open .brand,
-.brand:hover{
-  background: rgba(255, 255, 255, 0.05) url(../images/node_logo.png) no-repeat 13px 5px !important;
-}
+
 
 .headerTitle {
     position: relative;
@@ -316,6 +292,17 @@ ul.menu {
     margin-top: 22px;
 }
 
+.dropdown .caret {
+    margin-top: 14px;
+    color: #6D8CA0;
+}
+
+li.dropdown {
+    color: #2D2D2D;
+    font-weight: bold;
+}
+
+
 .backToMDN, .editInC9 {
     font-size: 11px;
     color: #657383;
@@ -345,6 +332,11 @@ ul.menu {
     background-color: white;
 }
 
+li.dropdown {
+    color: #2D2D2D;
+    font-weight: bold;
+}
+
 .members .tabs .dropdown a,
 .members .tabs a.menu:after, 
 .members .tabs .dropdown-toggle:after {
@@ -372,6 +364,9 @@ ul.menu {
     background-color: #ffffff;
     color: #000000;
 }
+.dropdown-menu {
+    border-top: none;
+}
 
 .tabs a.menu:after, .tabs .dropdown-toggle:after {
     margin-top: 13px;
@@ -385,10 +380,6 @@ ul.menu {
 #topSection .open .menu, #topSection .dropdown.open .menu, #topSection .open .dropdown-toggle, 
 #topSection .dropdown.open .dropdown-toggle  {
     color: #bfbfbf;
-}
-.nav .dropdown-menu {
-    margin-top: -1px;
-    background-color: #333;
 }
 
 .tabs > li {
@@ -413,7 +404,7 @@ ul.menu {
 }
 .topbar .dropdown-menu a, .dropdown-menu a {
     font-size: 11px;
-    color: #999;
+/*    padding: 2px 12px;*/
     line-height: 14px;
 }
 .tabs .active > a, .tabs .active > a:hover {
@@ -430,8 +421,7 @@ ul.menu {
 .srolled .tabs .menu-dropdown, .srolled .tabs .dropdown-menu {
     top: 32px;
 }
-.dropdown.open  a.dropdown-toggle {
-    border: none;
+.dropdown-toggle {
     color: #8a8a8a;
 }
 
@@ -453,7 +443,7 @@ ul.tabs .double ul, ul.tabs .triple ul, ul.tabs .quad ul{
 */
 
 #nonFooter {
-    padding-top: 60px;
+    padding-top: 40px;
 }
 #wrapper {
     height: 100%;
@@ -475,12 +465,8 @@ header.filler {
 }
 
 .centerpiece {
-    background: url(../images/sidebar_border.png) repeat-y 90px 0;
-    min-height: 100%;
-}
-
-.shortToc {
-    /*height: 100%;*/
+    background: url(../images/sidebar_border.png) repeat-y 120px 0;
+    height: 100%;
 }
 
 /*
@@ -541,14 +527,6 @@ div#documentation article:last-child {
 
 #documentation article:first-child {
     border:none;
-}
-
-#documentation .dropdown .caret {
-    margin-top: 14px;
-}
-
-#documentation .dropdown-menu {
-    background-color: white;
 }
 
 /*
@@ -739,6 +717,11 @@ li.signature {
 .snip-container label {
     color: #ffffff;
 }
+.description h4 {
+    font-size: 18px;
+    margin: 20px 0 10px;
+    line-height : 18px;
+}
 
 .table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
     background-color: transparent;
@@ -840,10 +823,10 @@ h3.methodToggle.active {
 */
 
 #footer {
-    width: 100%;
+    width:100%;
     background: #101010 url(../images/footer_bg.png) repeat 0 0;
     font-size: 12px;
-    color: white;
+    color: #c3c3c3;
     height: 40px;
 }
 #footer .footerInner {
@@ -851,18 +834,17 @@ h3.methodToggle.active {
     margin-left: auto;
     margin-right: auto;
     min-height: 40px;
-    /*background: url(../images/arrow-footer.png) no-repeat 588px -11px;*/
+    background:  url(../images/arrow_footer.png) no-repeat 261px 0;
 }
 #footer .footer-text {
-    font-size: 12px;
-    padding-right: 5px;
+    display: block;
+    float: left;
+    margin-right: 10px;
+    margin-top: 24px;
 }
-
 #footer .sponsors {
     display: inline-block;
-    float: right;
-    margin-right: 5px;
-    margin-top: 8px;
+    margin-top: 18px;
 }
 
 #footer .sponsors .sponsor {
