--- a/doc/resources/common_layout.jade
+++ b/doc/resources/common_layout.jade
@@ -31,7 +31,7 @@ mixin head
 
   link(href="./assets/images/favicon.ico", rel="icon", type="image/x-icon")
 
-  link(type="text/css", rel="stylesheet", href="http://yandex.st/highlightjs/6.1/styles/vs.min.css")
+  link(type="text/css", rel="stylesheet", href="//yandex.st/highlightjs/6.1/styles/vs.min.css")
 
   script(src="./assets/javascripts/jquery.js")
   script(src="./assets/javascripts/clicker.js")
