centering text using CSS

--- a/plugins-client/ext.main/style/style.css
+++ b/plugins-client/ext.main/style/style.css
@@ -49,6 +49,7 @@ BODY {
     height: 100%;
     width: 100%;
     position: fixed;
+    text-align: center;
     z-index: 2000;
     left: 0;
     top: 0;
