--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -68,21 +68,18 @@
             var config = <%requirejsConfig%>; 
 
             function createSplash() {
-                var loadingMsgs = ["Cloning weapon",
-                    "Red 2 standing by",
-                    "Witnessing the firepower of this fully ARMED and OPERATIONAL battle station",
-                    "Making sure all systems are opperational",
-                    "Turning you to the dark side - we have cookies",
-                    "Assembling the allience",
-                    "Copy, Gold Leader. We are already on our way out",
-                    "Dispatching war rocket Ajax to bring back his body",
-                    "Making you strong with the force we are",
-                    "Chewie? Chewie, is that you pal?",
-                    "The Shield is down! Commencing attack on the Death star's main reactor.",
-                    "Your precious awaits",
-                    "One IDE to rule them all",
-                    "I am Gandalf the White. And I come back to you now… at the turn of the tide.",
-                    "A day may come when the courage of men fails… but it is not THIS day."];
+                var loadingMsgs = ["Cloning weapon...",
+                    "Red 5, standing by...",
+                    "Making sure all systems are operational",
+                    "Turning you to the dark side--we have cookies...",
+                    "Assembling the alliance...",
+                    "Copy, Gold Leader. We are already on our way out...",
+                    "Dispatching war rocket Ajax to bring back his body...",
+                    "Making you strong with the force, we are...",
+                    "The Shield is down! Commencing attack on the Death star's main reactor...",
+                    "Your precious awaits...",
+                    "I am Gandalf the White. And I come back to you now, at the turn of the tide...",
+                    "Reticulating splines..."];
                 var loadingIde = document.createElement('div');
                 loadingIde.setAttribute("id", "loadingide");
                 var msg = loadingMsgs[Math.floor(Math.random() * loadingMsgs.length)];
