--- a/doc/resources/templates/xml_lib.jade
+++ b/doc/resources/templates/xml_lib.jade
@@ -1,6 +1,7 @@
 - var attributeSection;
 
 mixin makeTag(obj)
+  -console.log(obj)
   -xmlBlobs = "<a:" + obj.name + "     \n"; 
 
   -obj.children.forEach(function(k) {
