--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -70,7 +70,7 @@
             function createSplash() {
                 var loadingMsgs = ["Cloning weapon...",
                     "Red 5, standing by...",
-                    "Making sure all systems are operational",
+                    "Making sure all systems are operational...",
                     "Turning you to the dark side--we have cookies...",
                     "Assembling the alliance...",
                     "Copy, Gold Leader. We are already on our way out...",
