--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -93,7 +93,9 @@
             }
 
             require(config, [apfLoc], function(){
-                setTimeout(createSplash);
+                if (!localStorage || !localStorage.lastLoadTime ||
+                    parseInt(localStorage.lastLoadTime) > 4000)
+                    setTimeout(createSplash);
 
                 if (!cloud9config.packed) {
                     var list = ["core/ide", "core/ext", "core/util", 
@@ -153,6 +155,8 @@
                 cloud9config.totalTime = new Date() - cloud9config.startdate;
                 console.log("Total Load Time " 
                     + (cloud9config.totalTime) + "ms");
+                if (localStorage)
+                    localStorage.lastLoadTime = cloud9config.totalTime;
 
                 var loadingDiv = document.getElementById("loadingide");
                 if (loadingDiv)
