--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -94,7 +94,7 @@
 
             require(config, [apfLoc], function(){
                 if (!window.localStorage || !localStorage.lastLoadTime ||
-                    parseInt(localStorage.lastLoadTime) > 4000)
+                    parseInt(localStorage.lastLoadTime, 10) > 4000)
                     setTimeout(createSplash);
 
                 if (!cloud9config.packed) {
