--- a/doc/resources/templates/apf_menu.jade
+++ b/doc/resources/templates/apf_menu.jade
@@ -47,4 +47,27 @@ h2 UI Elements
     li.menu-item
       mixin link(obj, ["baseclass"])
 
-  
+ h3 Terms
+  ul.menu
+    li
+        a(href="./actionrules.html") Action Rules
+    li
+        a(href="./baseclass.html")   Base Classes
+    li
+        a(href="./bindingrules.html") Binding Rules
+    li
+        a(href="./caret.html") Caret
+    li
+        a(href="./datainstruction.html") Data Instructions
+    li
+        a(href="./datanode.html") Data Node
+    li
+        a(href="./eachnode.html") Each Node
+    li
+        a(href="./livemarkup.html") Live Markup
+    li
+        a(href="./locking.html") Locking
+    li
+        a(href="./propertybinding.html") Property Binding
+    li
+        a(href="./smartbinding.html") Smart Binding
