--- a/doc/resources/assets/csses/refguide_overrides.css
+++ b/doc/resources/assets/csses/refguide_overrides.css
@@ -285,7 +285,8 @@ ul.menu {
     margin-bottom: 5px;
     position: absolute;
     padding-top: 4px;
-    
+    font-family: Helvetica;
+    font-weight: 100;
 }
     
 .tabs a.menu:after, .tabs .dropdown-toggle:after {
@@ -482,12 +483,8 @@ header.filler {
     margin-bottom: 3px;
 }
 
-#sidebarContainer {
-    margin-right: 60px;
-}
-     
 #sidebar {
-    margin-top: 9px;
+    margin-top: 4px;
     /*background: url(../images/sidebar-border.png) repeat-y right 0;*/
     margin-left: 12px;
 /*    width: 280px;*/
@@ -495,17 +492,25 @@ header.filler {
     padding-right : 10px;
 }
 
-#sidebar h3 a,
-#sidebar h3 a:hover {
-    color: #404040;
+#sidebar h2, #sidebar h3 {
+    font-family: Helvetica;
+    font-weight: 100;
 }
 
-#mainContent {
-    margin-left: 30px;
+#sidebar h3 a,
+#sidebar h3 a:hover {
+    color: #2D76A0;
+    font-weight: 100;
+    font-family: Helvetica;
 }
 
 #documentation {
     padding-bottom: 10px;
+}
+
+#documentation h4, #documentation h3, #documentation h2, #documentation h1 {
+    font-weight: 100;
+    font-family: Helvetica;
 }
 
 #documentation article.article {
@@ -670,8 +675,17 @@ li.signature {
 }
 
 .inheritedFrom {
-    background-color: #F89406;
-    color: #ffffff;
+    font-size: 12px;
+    vertical-align: middle;
+    line-height: 13px;
+    padding: 1px 4px 2px;
+    float: right;
+    background: transparent;
+    color: #888;
+}
+
+.inheritedFrom a {
+    color: #888;
 }
 
 .chainable {
@@ -697,7 +711,7 @@ li.signature {
     text-transform: capitalize;
 }
 
-.inheritedFrom a, .alias a, .related-to a {
+.alias a, .related-to a {
     color: #ffffff;
     /* text-decoration: underline; */ 
 }
@@ -732,6 +746,8 @@ li.signature {
     font-size: 18px;
     margin: 20px 0 10px;
     line-height : 18px;
+    font-weight: 100;
+    font-family: Helvetica;
 }
 
 div#inheritance {
@@ -740,10 +756,17 @@ div#inheritance {
     padding: 2px 10px 5px 10px;
     margin: 10px 0 -10px 10px;
     max-width: 240px;
+    border-top-right-radius: 5px;
+    box-shadow: inset 2px -2px 2px rgba(0, 0, 0, 0.1);
+    border-bottom-left-radius: 5px;
 }
 
 div#inheritance ul {
- margin: 0 0 0 14px;
+    margin: 0 0 0 14px;
+}
+
+div#inheritance ul#hierarchyTree {
+    margin-left: 0;
 }
 
 #inheritance h6 {
@@ -752,18 +775,15 @@ div#inheritance ul {
     display: block;
     padding: 2px 3px 2px 4px;
     margin: -2px -11px 0 -11px;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
+    border-top-right-radius: 5px;
+    font-family: Helvetica;
+    font-weight: 100;
 }
 
 #hierarchyTree li {
     font-size: 11px;
     list-style-type: none;
-}
-
-.table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
-    background-color: transparent;
-}
-.table-striped tbody tr:nth-child(even) td, .table-striped tbody tr:nth-child(even) th {
-    background-color: #fbfbfb;
 }
 
 .argument-list{
@@ -772,7 +792,6 @@ div#inheritance ul {
 .argName {
     font-style: italic;
 }
-
 
 /*
   Everyday I'm togglin'
