--- a/plugins-client/ext.uimgr/style/style.css
+++ b/plugins-client/ext.uimgr/style/style.css
@@ -10,22 +10,35 @@
     margin-top: 0;
 }
 
+.ui-section.close .ui-item {
+    display: none;
+}
+
 #winUIExtContent h3 {
     background: #FEF0CF;
     padding: 10px 5px;
     border-top: 1px solid #E3D5BC;
 }
-
-#winUIExtContent pre {
+#winUIExtContent h4 {
+    margin-top: 0;
+}
+#winUIExtContent .winUIExtCode {
     background: #f2f2f2;;
     border-radius: 4px;
+    border: 0 none;
     box-shadow: 0 0 0 1px #ddd;
+    font-family: monospace;
     padding: 10px;
+    margin-top: 10px;
     white-space: pre-wrap;
 }
 
 #winUIExtContent .ui-dark {
     background: #2B2B2B;
+    padding: 10px 5px;
+}
+#winUIExtContent .ui-grey {
+    background: #f2f2f2;
     padding: 10px 5px;
 }
 
@@ -35,6 +48,19 @@
 
 #winUIExtContent .version {
     float: left;
+    margin-left: 17px;
     width: 550px;
-    margin-right: 17px;
+}
+#winUIExtContent .relative {
+    position: relative;
+}
+#winUIExtContent .header-btn {
+    top: 0;
+    left: 0;
+    position: relative;
+}
+
+.position-static {
+    position: static !important;
+    margin: 0 !important;
 }
